[init] initial commit

--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
-  "name": "Vanilla Project",
+  "name": "main-project",
   "version": "1.0.0",
   "description": "멋쟁이 사자처럼 바닐라 프로젝트",
   "main": "main.js",
-  "scripts": {},
+  "scripts": {
+    "start": "npx live-server client --host=localhost --port=5500 --no-browser",
+    "serve": "npx json-server server/db/data.json",
+    "all": "run-p serve start"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/likelion-lab8-JS/main-project.git"
+  },
   "keywords": [
     "html",
     "css",
@@ -13,5 +21,18 @@
     "함수형 프로그래밍"
   ],
   "author": "담당자",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/likelion-lab8-JS/main-project/issues"
+  },
+  "homepage": "https://github.com/likelion-lab8-JS/main-project#readme",
+  "devDependencies": {
+    "eslint": "^8.32.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "json-server": "^0.17.1",
+    "live-server": "^1.2.2",
+    "npm-run-all": "^4.1.5"
+  }
 }
